# zai2api

./: .dev.vars.example  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
.github/workflows/: deploy.yml
migrations/: 0001_initial.sql
public/: app.js  index.html  styles.css
src/zai2api/: __init__.py  _captcha_playwright.py  account_pool.py  admin_page.py  captcha.py  config.py  db.py  server.py  zai_client.py
tests/: test_account_pool.py  test_admin_auth.py  test_admin_management_api.py  test_admin_page.py  test_log_retention.py  test_request_error_mapping.py  test_response_shapes.py  test_streaming_errors.py  test_zai_client.py
web-src/: App.vue  index.html  tsconfig.json
web-src/api/: client.ts  types.ts
web-src/components/: AccountCard.vue  AppShell.vue  Badge.vue  Button.vue  Card.vue  ConfirmDialog.vue  EmptyState.vue  FilterChips.vue  FormField.vue  GuestSourceCard.vue  HeroCard.vue  LogEntryCard.vue  MetaPill.vue  Toast.vue  (+4 more)
worker-src/: account-pool.ts  app-env.ts  app.ts  auth.ts  bindings.ts  config.ts  crypto.ts  guest-source.ts  helpers.ts  index.ts  prompt-assembly.ts  repository.ts  services.ts  utils.ts  zai-client.ts
worker-tests/: account-pool.test.ts  admin-routes.test.ts  auth.test.ts  config.test.ts  crypto.test.ts  guest-source.test.ts  helpers.test.ts  openai-routes.test.ts  prompt-assembly.test.ts  repository-accounts.test.ts  repository-logs.test.ts  services.test.ts  zai-client.test.ts
(+17 files in other folders)
