[project]
name = "zai2api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "orbitoo", email = "elbertoo001@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
zai2api = "zai2api:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
